--- a/yofavmovies/Base.lproj/Main.storyboard
+++ b/yofavmovies/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="DMH-iT-ApE">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home Screen-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="Home Screen" customClass="ViewController" customModule="yofavmovies" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,149 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="134" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wbk-fe-KiN">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="134" id="D5p-iT-Xga" customClass="MovieCell" customModule="yofavmovies" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="134"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="D5p-iT-Xga" id="6x3-Pk-DBs">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="133"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ob2-Fv-o5Z">
+                                                    <rect key="frame" x="8" y="17" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="100" id="GMc-J7-7ya"/>
+                                                        <constraint firstAttribute="width" constant="100" id="c1k-RG-uX1"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Of Movie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eqk-Pb-SKf">
+                                                    <rect key="frame" x="116" y="16" width="476" height="38"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="38" id="oXD-Me-TLb"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description of Why" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cs4-fi-DCI">
+                                                    <rect key="frame" x="116" y="56" width="476" height="38"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="38" id="qtT-2s-VGt"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="link to movie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7x-vs-1YC">
+                                                    <rect key="frame" x="116" y="95" width="476" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="22" id="rPP-jF-ht0"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="CourierNewPSMT" family="Courier New" pointSize="12"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Cs4-fi-DCI" firstAttribute="top" secondItem="Eqk-Pb-SKf" secondAttribute="bottom" constant="2" id="9mP-x5-Jw0"/>
+                                                <constraint firstItem="Eqk-Pb-SKf" firstAttribute="leading" secondItem="Ob2-Fv-o5Z" secondAttribute="trailing" constant="8" id="FY1-Sx-1H2"/>
+                                                <constraint firstItem="Cs4-fi-DCI" firstAttribute="trailing" secondItem="6x3-Pk-DBs" secondAttribute="trailingMargin" id="WUK-yz-vs3"/>
+                                                <constraint firstItem="Ob2-Fv-o5Z" firstAttribute="top" secondItem="6x3-Pk-DBs" secondAttribute="topMargin" constant="9" id="ftT-mL-d8L"/>
+                                                <constraint firstItem="c7x-vs-1YC" firstAttribute="top" secondItem="Cs4-fi-DCI" secondAttribute="bottom" constant="1" id="jUP-fO-T5h"/>
+                                                <constraint firstItem="Cs4-fi-DCI" firstAttribute="leading" secondItem="Ob2-Fv-o5Z" secondAttribute="trailing" constant="8" id="oqJ-ai-fLF"/>
+                                                <constraint firstItem="Ob2-Fv-o5Z" firstAttribute="leading" secondItem="6x3-Pk-DBs" secondAttribute="leadingMargin" id="pU3-CJ-2Ua"/>
+                                                <constraint firstItem="c7x-vs-1YC" firstAttribute="leading" secondItem="Ob2-Fv-o5Z" secondAttribute="trailing" constant="8" id="vZz-NP-yjy"/>
+                                                <constraint firstItem="c7x-vs-1YC" firstAttribute="trailing" secondItem="6x3-Pk-DBs" secondAttribute="trailingMargin" id="wA1-O0-JRd"/>
+                                                <constraint firstItem="Eqk-Pb-SKf" firstAttribute="top" secondItem="6x3-Pk-DBs" secondAttribute="topMargin" constant="8" id="wPE-Lb-vc5"/>
+                                                <constraint firstItem="Eqk-Pb-SKf" firstAttribute="trailing" secondItem="6x3-Pk-DBs" secondAttribute="trailingMargin" id="wjU-3f-vPa"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Ob2-Fv-o5Z" secondAttribute="bottom" constant="8" id="yYn-Yb-iZc"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="wbk-fe-KiN" secondAttribute="trailing" id="0WD-X7-l9O"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wbk-fe-KiN" secondAttribute="bottom" id="BbG-aY-0s7"/>
+                            <constraint firstItem="wbk-fe-KiN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Mbn-IT-Qk3"/>
+                            <constraint firstItem="wbk-fe-KiN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Vc5-ed-pE4"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="udA-Fv-wPW">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="XKk-LD-xHn">
+                            <color key="tintColor" red="1" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="Ynt-ew-eik" kind="presentation" identifier="toAddScreen" modalTransitionStyle="flipHorizontal" id="fFJ-xa-hRI"/>
+                        <segue destination="uiC-IF-oJS" kind="show" identifier="toDetailScreen" id="PU3-CG-er3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1057" y="337"/>
+        </scene>
+        <!--Detail Screen-->
+        <scene sceneID="kd4-X4-DVu">
+            <objects>
+                <viewController id="uiC-IF-oJS" userLabel="Detail Screen" customClass="DetailVC" customModule="yofavmovies" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="w6a-Y2-2BR"/>
+                        <viewControllerLayoutGuide type="bottom" id="DLh-Oz-1qm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bvb-8w-5eh">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title Of Movie" id="jnq-dJ-GBV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Dz-PG-j43" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1762" y="337"/>
+        </scene>
+        <!--Add New Screen-->
+        <scene sceneID="WSo-FB-OyE">
+            <objects>
+                <viewController id="Ynt-ew-eik" userLabel="Add New Screen" customClass="AddVC" customModule="yofavmovies" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dyW-Te-1Tq"/>
+                        <viewControllerLayoutGuide type="bottom" id="c9C-dD-oUk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="P9t-2V-iNn">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TmD-P7-Eb7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1057" y="1094"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BWa-ee-xSd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DMH-iT-ApE" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2NJ-HK-BF8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.79215693470000004" green="0.11372549830000001" blue="0.11372549830000001" alpha="1" colorSpace="deviceRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="szy-zC-suN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZZ8-sl-Gt9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="285" y="337"/>
         </scene>
     </scenes>
 </document>
